5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_2895.log
== TEST (2019-03-26 16:41:04) 
-- CODE:
var=float(input("valor unitario:"))
njogos=8.0
valortotal=(var*8)+frete
if frete= 5
print(valortotal)


-- ERROR:
File "XXXX", line 4
    if frete= 5
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:21) 
-- CODE:
var=float(input("valor unitario:"))
var2=float(input("numero de jogos))
var3=float(input("valor do frete")
valortotal=(var*8)+frete
print(valortotal)


-- ERROR:
File "XXXX", line 2
    var2=float(input("numero de jogos))
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:37) 
-- CODE:
var=float(input("valor unitario:"))
var2=float(input("numero de jogos"))
var3=float(input("valor do frete")
valortotal=(var*8)+frete
print(valortotal)


-- ERROR:
File "XXXX", line 4
    valortotal=(var*8)+frete
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:38) 
-- CODE:
var=float(input("valor unitario:"))
var2=float(input("numero de jogos"))
var3=float(input("valor do frete")
valortotal=(var*8)+frete
print(valortotal)


-- ERROR:
File "XXXX", line 4
    valortotal=(var*8)+frete
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:45:03) 
-- CODE:
var=float(input("valor unitario:"))
var2=float(input("numero de jogos"))
var3=float(input("valor do frete")



-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:46:57) 
-- CODE:
var=float(input("valor unitario:"))
frete=40.0
njogos=5.0
valortotal=(var*8)+frete
print(valortotal)



-- OUTPUT:
136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:25) 
-- CODE:
var=float(input("valor unitario:"))
frete=40.0
njogos=5.0
valortotal=(var*njogos)+frete
print(valortotal)



-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:47:30) 
-- CODE:
var=float(input("valor unitario:"))
frete=40.0
njogos=5.0
valortotal=(var*njogos)+frete
print(valortotal)



-- EXECUTION TIME:
0.179875
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
100.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
90.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1270.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:36) 
-- CODE:
var=float(input("valor unitario:"))
frete=40.0
njogos=5.0
valortotal=(var*njogos)+frete
print(valortotal)



-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:48:23) 
-- CODE:
var=float(input("valor unitario:"))
frete=40.0
njogos=5.0
valortotal=(var*njogos)+frete
print(int(valortotal))



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:48:28) 
-- CODE:
var=float(input("valor unitario:"))
frete=40.0
njogos=5.0
valortotal=(var*njogos)+frete
print(int(valortotal))



-- EXECUTION TIME:
0.134504
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
100
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
90
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1270
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:14) 
-- CODE:
njogos=float(input("valor do frete"))
var=float(input("valor unitario:"))
frete=float(input("valor do frete"))
valortotal=(var*njogos)+frete
print(int(valortotal))



-- OUTPUT:
618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:20) 
-- CODE:
njogos=float(input("valor do frete"))
var=float(input("valor unitario:"))
frete=float(input("valor do frete"))
valortotal=(var*njogos)+frete
print(int(valortotal))



-- OUTPUT:
618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:46) 
-- CODE:
njogos=float(input("valor do frete"))
var=float(input("valor unitario:"))
frete=float(input("valor do frete"))
valortotal=(var*njogos)+frete
print(int(valortotal))



-- OUTPUT:
618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:08) 
-- CODE:
njogos=float(input("quantidade"))
var=float(input("valor unitario:"))
frete=float(input("valor do frete"))
valortotal=(var*njogos)+frete
print(int(valortotal))



-- OUTPUT:
618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:51:16) 
-- CODE:
njogos=float(input("quantidade"))
var=float(input("valor unitario:"))
frete=float(input("valor do frete"))
valortotal=(var*njogos)+frete
print(int(valortotal))



-- EXECUTION TIME:
0.189116
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
